--- a/00-Prerequisites/02-Preparation/Python-02-Python.ipynb
+++ b/00-Prerequisites/02-Preparation/Python-02-Python.ipynb
@@ -1291,8 +1291,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "320 µs ± 50.6 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
-      "231 µs ± 23.9 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "313 µs ± 963 ns per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
+      "254 µs ± 1.86 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -1411,6 +1411,160 @@
     "\n",
     "selected = [particle.capitalize() for particle in particles if 'o' in particle]\n",
     "selected"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dict Comprehensions\n",
+    "\n",
+    "Dict comprehensions expands the idea of a list comprehension but for python dictionaries!\n",
+    "\n",
+    "Lets create a dictionary of the squares of numbers 0 through 9 inclusive, could write a loop like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 0, 1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "squares = {}\n",
+    "for n in range(10):\n",
+    "    squares[n] = n**2\n",
+    "squares"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or we can write it as a dict comprehension as follows (note the special syntax \"key: value\" to assign the key and value of the dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 0, 1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81}"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "squares = { n: n**2 for n in range(10) }\n",
+    "squares"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets do a speed test again, it's not as fast as list comprehensions tho...:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "291 µs ± 386 ns per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
+      "267 µs ± 344 ns per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "squares = {}\n",
+    "%timeit for n in range(1000): squares[n] = n**2\n",
+    "%timeit squares = { n: n**2 for n in range(1000) }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So why should I bother you may ask! But we can a lot more... say we wanted only the even numbers to be squared:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 0, 2: 4, 4: 16, 6: 36, 8: 64}"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "squares = { n: n**2 for n in range(10) if n%2 == 0}\n",
+    "squares"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "or if we just want to do a simple count of each entry in a list:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "particles = ['positron', 'electron', 'electron', 'positron', 'electron', 'positron', 'electron', 'electron', 'electron', 'positron', 'electron', 'positron']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'positron': 5, 'electron': 7}"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "counts = { k: particles.count(k) for k in particles }\n",
+    "counts"
    ]
   }
  ],
