bug fixed on some notebooks, also added PyTorch notebook

--- a/00-Prerequisites/02-Preparation/Python-02-Python.ipynb
+++ b/00-Prerequisites/02-Preparation/Python-02-Python.ipynb
@@ -431,8 +431,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`get()` is a useful function that can set a default return value if a specified key does not exist."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'very heavy'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "par_to_mass.get('kazu','very heavy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -450,17 +477,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To retrieve keys and values from a dictionary:\n",
+    "To retrieve a list of keys and/or values from a dictionary:\n",
     "- `.items()` applied to a dictionary return a pair of keys and values\n",
     "- `.keys()` applied to a dictionary return all the keys\n",
     "- `.values()` applied to a dictionary return all the values\n",
     "\n",
-    "You can also you `.get()` as in `par_to_mass.get('muon')`."
+    "Let's try looping over all key-value pairs using `items()`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -644,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -721,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +757,7 @@
        "124970.0"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -798,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -842,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -883,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +919,7 @@
        "4180.0"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -918,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -953,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1027,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1133,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1171,6 +1198,202 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Application: a variable collections\n",
+    "In C++, for quick encapsulation, we often use a _struct_ container. A hacky but handy way of achieving something similar in Python is to define an empty class, and dyncamically attach attributes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BLOB:\n",
+    "    pass\n",
+    "\n",
+    "blob=BLOB()\n",
+    "blob.data   = XPS15()\n",
+    "blob.number = 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `hasattr` and `getattr`\n",
+    "Since this blob object is dynamic, you might want a capability to check, when given a blob object, a certain attribute exists or not. Python has a handy built-in functions `hasattr` and `getattr` (\"attr\" stands for \"attributes\")."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "does it have \"tracy\"? False\n",
+      "\n",
+      "__str__ of tracy... no it does not exist\n",
+      "\n",
+      "does it have \"data\"? True\n",
+      "\n",
+      "__str__ of data... Hi! I am dell xps15, and I am a laptop. I have 8 CPUs and 1 GPUs.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('does it have \"tracy\"?', hasattr(blob, \"tracy\") )\n",
+    "print('\\n__str__ of tracy...', getattr(blob,\"tracy\", 'no it does not exist'))\n",
+    "print('\\ndoes it have \"data\"?', hasattr(blob, \"data\" ) )\n",
+    "print('\\n__str__ of data...', getattr(blob, \"data\", 'no it does not exist'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Application: an iteratable class"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An array-like data container in which individual data element can be accessed by an index (i.e. \"[]\") or iterate over would be very handy. Such a structure also helps to generalize a design of data streaming tools. We practice to design such a Python class below. \n",
+    "\n",
+    "First, let's define a iterable container. For an iteration in Python, you need two built-in functions: a _len_ which returns the \"length of array-like data\" and _getitem_ which arrows a random-access operator (i.e. \"[ ]\"). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class dataset:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self._data = tuple(range(100))\n",
+    "        \n",
+    "    def __len__(self):\n",
+    "        return len(self._data)\n",
+    "    \n",
+    "    def __getitem__(self,index):\n",
+    "        return self._data[index]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above example class `dataset` constructs a simple data, an array of length 100 filled with numbers 0 to 99. The length of the dataset is accordingly 100, and the random access operator returns the corresponding index entry of the array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length: 100\n",
+      "10th element: 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = dataset()\n",
+    "print('Length:',len(data))\n",
+    "print('10th element:',data[10])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can also slice this data object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10, 11, 12, 13, 14, 15, 16, 17, 18, 19)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[10:20]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here's how you can create an iterator for an iterable object using _iter_ built-in function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<iterator at 0x7f5c3c5486a0>"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iter(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can move the iterator to the next object using the _next_ built-in function. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "it = iter(data)\n",
+    "print(next(it), next(it), next(it))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Conclusions\n",
     "\n",
     "And now, just for fun, let's import this."
@@ -1178,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1233,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1242,7 +1465,7 @@
        "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1263,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1272,7 +1495,7 @@
        "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1284,15 +1507,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "320 µs ± 50.6 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
-      "231 µs ± 23.9 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "335 µs ± 26.6 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
+      "257 µs ± 17.1 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -1304,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 49,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -1321,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1330,7 +1553,7 @@
        "['up', 'down', 'charm', 'muon', 'top', 'tau', 'gluon', 'z', 'w', 'higgs']"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1342,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1367,7 +1590,7 @@
        " 'anti_higgs']"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1382,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1400,7 +1623,7 @@
        " 'Photon']"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
