added dict comprehension from Yee

--- a/00-Prerequisites/02-Preparation/Python-02-Python.ipynb
+++ b/00-Prerequisites/02-Preparation/Python-02-Python.ipynb
@@ -1353,7 +1353,7 @@
     {
      "data": {
       "text/plain": [
-       "<iterator at 0x7f5c3c5486a0>"
+       "<iterator at 0x7f27dc678630>"
       ]
      },
      "execution_count": 43,
@@ -1394,6 +1394,353 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## List Comprehensions \n",
+    "\n",
+    "List comprehensions are one of Python's most beloved and unique features. The easiest way to understand them is probably to just look at a an example. \n",
+    "\n",
+    "Let's assume we want to calculate all the squarer of the numbers between 0 and 9. With a `for` loop we would do:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "squares = []\n",
+    "for n in range(10):\n",
+    "    squares.append(n**2)\n",
+    "squares"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instead, with list comprehension we can just do:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "squares = [n**2 for n in range(10)]\n",
+    "squares"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "366 µs ± 77.9 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
+      "248 µs ± 139 ns per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "squares = []\n",
+    "%timeit for n in range(1000): squares.append(n**2)\n",
+    "%timeit squares = [n**2 for n in range(1000)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "particles = ['up', 'down', 'electron', 'electron_neutrino',\n",
+    "             'charm', 'strange', 'muon', 'muon_neutrino', \n",
+    "             'top', 'bottom', 'tau', 'tau_neutrino',\n",
+    "             'gluon', 'photon', 'z', 'w',\n",
+    "             'higgs']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['up', 'down', 'charm', 'muon', 'top', 'tau', 'gluon', 'z', 'w', 'higgs']"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "short_particles = [particle for particle in particles if len(particle) < 6]\n",
+    "short_particles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['anti_up',\n",
+       " 'anti_down',\n",
+       " 'anti_electron',\n",
+       " 'anti_electron_neutrino',\n",
+       " 'anti_charm',\n",
+       " 'anti_strange',\n",
+       " 'anti_muon',\n",
+       " 'anti_muon_neutrino',\n",
+       " 'anti_top',\n",
+       " 'anti_bottom',\n",
+       " 'anti_tau',\n",
+       " 'anti_tau_neutrino',\n",
+       " 'anti_gluon',\n",
+       " 'anti_photon',\n",
+       " 'anti_z',\n",
+       " 'anti_w',\n",
+       " 'anti_higgs']"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# EXCERCISE:\n",
+    "# Get a list of antiparticles\n",
+    "\n",
+    "antiparticles = ['anti_' + particle for particle in particles]\n",
+    "antiparticles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Down',\n",
+       " 'Electron',\n",
+       " 'Electron_neutrino',\n",
+       " 'Muon',\n",
+       " 'Muon_neutrino',\n",
+       " 'Top',\n",
+       " 'Bottom',\n",
+       " 'Tau_neutrino',\n",
+       " 'Gluon',\n",
+       " 'Photon']"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# EXCERCISE:\n",
+    "# Get all the particles that contain character 'o', and capitalize them.\n",
+    "\n",
+    "selected = [particle.capitalize() for particle in particles if 'o' in particle]\n",
+    "selected"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dict Comprehensions\n",
+    "\n",
+    "Dict comprehensions expands the idea of a list comprehension but for python dictionaries!\n",
+    "\n",
+    "Lets create a dictionary of the squares of numbers 0 through 9 inclusive, could write a loop like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 0, 1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81}"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "squares = {}\n",
+    "for n in range(10):\n",
+    "    squares[n] = n**2\n",
+    "squares"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or we can write it as a dict comprehension as follows (note the special syntax \"key: value\" to assign the key and value of the dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 0, 1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81}"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "squares = { n: n**2 for n in range(10) }\n",
+    "squares"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets do a speed test again, it's not as fast as list comprehensions tho...:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "292 µs ± 1.32 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
+      "267 µs ± 1.66 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "squares = {}\n",
+    "%timeit for n in range(1000): squares[n] = n**2\n",
+    "%timeit squares = { n: n**2 for n in range(1000) }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So why should I bother you may ask! But we do can a lot more... say we wanted only the even numbers to be squared:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 0, 2: 4, 4: 16, 6: 36, 8: 64}"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "squares = { n: n**2 for n in range(10) if n%2 == 0}\n",
+    "squares"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "or if we just want to do a simple count of each entry in a list:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "particles = ['positron', 'electron', 'electron', 'positron', 'electron', 'positron', 'electron', 'electron', 'electron', 'positron', 'electron', 'positron']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'positron': 5, 'electron': 7}"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "counts = { k: particles.count(k) for k in particles }\n",
+    "counts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Conclusions\n",
     "\n",
     "And now, just for fun, let's import this."
@@ -1401,7 +1748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1434,206 +1781,6 @@
    ],
    "source": [
     "import this "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Extras"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## List Comprehensions \n",
-    "\n",
-    "List comprehensions are one of Python's most beloved and unique features. The easiest way to understand them is probably to just look at a an example. \n",
-    "\n",
-    "Let's assume we want to calculate all the squarer of the numbers between 0 and 9. With a `for` loop we would do:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "squares = []\n",
-    "for n in range(10):\n",
-    "    squares.append(n**2)\n",
-    "squares"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Instead, with list comprehension we can just do:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "squares = [n**2 for n in range(10)]\n",
-    "squares"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "335 µs ± 26.6 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
-      "257 µs ± 17.1 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "squares = []\n",
-    "%timeit for n in range(1000): squares.append(n**2)\n",
-    "%timeit squares = [n**2 for n in range(1000)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "particles = ['up', 'down', 'electron', 'electron_neutrino',\n",
-    "             'charm', 'strange', 'muon', 'muon_neutrino', \n",
-    "             'top', 'bottom', 'tau', 'tau_neutrino',\n",
-    "             'gluon', 'photon', 'z', 'w',\n",
-    "             'higgs']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['up', 'down', 'charm', 'muon', 'top', 'tau', 'gluon', 'z', 'w', 'higgs']"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "short_particles = [particle for particle in particles if len(particle) < 6]\n",
-    "short_particles"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['anti_up',\n",
-       " 'anti_down',\n",
-       " 'anti_electron',\n",
-       " 'anti_electron_neutrino',\n",
-       " 'anti_charm',\n",
-       " 'anti_strange',\n",
-       " 'anti_muon',\n",
-       " 'anti_muon_neutrino',\n",
-       " 'anti_top',\n",
-       " 'anti_bottom',\n",
-       " 'anti_tau',\n",
-       " 'anti_tau_neutrino',\n",
-       " 'anti_gluon',\n",
-       " 'anti_photon',\n",
-       " 'anti_z',\n",
-       " 'anti_w',\n",
-       " 'anti_higgs']"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# EXCERCISE:\n",
-    "# Get a list of antiparticles\n",
-    "\n",
-    "antiparticles = ['anti_' + particle for particle in particles]\n",
-    "antiparticles"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Down',\n",
-       " 'Electron',\n",
-       " 'Electron_neutrino',\n",
-       " 'Muon',\n",
-       " 'Muon_neutrino',\n",
-       " 'Top',\n",
-       " 'Bottom',\n",
-       " 'Tau_neutrino',\n",
-       " 'Gluon',\n",
-       " 'Photon']"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# EXCERCISE:\n",
-    "# Get all the particles that contain character 'o', and capitalize them.\n",
-    "\n",
-    "selected = [particle.capitalize() for particle in particles if 'o' in particle]\n",
-    "selected"
    ]
   }
  ],
